fix some styles and styles scrollbar

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -20,11 +20,13 @@
   letter-spacing: 0.04em;
   color: $mainTextColor;
   margin-bottom: 40px;
+  transition: 200ms;
   &:last-child {
     margin-bottom: 0;
   }
   &:hover {
     color: $orangeColor;
+    transform: color;
   }
   @media screen and (min-width: 768px) and (max-width: 1279px) {
     font-size: 48px;
