--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -1,11 +1,11 @@
 @import 'variables/variables.scss';
 
 .newsWrap {
-  padding-top: 42px;
+  padding-top: 45px;
   padding-bottom: 100px;
 
   @media screen and (min-width: 768px) {
-    padding-top: 94px;
+    padding-top: 95px;
   }
 
   @media screen and (min-width: 1280px) {
